--- a/predicting.ipynb
+++ b/predicting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 180,
    "metadata": {
     "scrolled": true
    },
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
        "['y_list_depression']"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,16 +670,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
     "target = np.array(y_list)\n",
     "ss = StandardScaler()\n",
     "\n",
+    "allowed_suffixes_list_initial = ['initial']\n",
     "allowed_suffixes_list_2_click = ['initial', '2click_1simplex']\n",
     "allowed_suffixes_list_3_click = ['initial', '3click_1simplex', '3click_2simplex']\n",
     "\n",
+    "columns_initial = [column for column in df.columns if any(suffix in column for suffix in allowed_suffixes_list_initial)]\n",
     "columns_2click = [column for column in df.columns if any(suffix in column for suffix in allowed_suffixes_list_2_click)]\n",
     "columns_3click = [column for column in df.columns if any(suffix in column for suffix in allowed_suffixes_list_3_click)]\n",
     "# columns_all = list(df.columns)"
@@ -687,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +718,10 @@
     "        'method_name': method_name,\n",
     "    }\n",
     "\n",
-    "    for columns_descryption, columns_list in zip(['3-level features', '2-level features'], [columns_2click, columns_3click]):\n",
+    "    for columns_descryption, columns_list in zip(\n",
+    "        ['initial', '2-level features', '3-level features'],\n",
+    "        [columns_initial, columns_2click, columns_3click],\n",
+    "    ):\n",
     "        train_normed = ss.fit_transform(df[columns_list].values)\n",
     "        scoring_method = 'roc_auc'\n",
     "        method_scores = cross_val_score(lr, X=train_normed, y=target, cv=rk, scoring=scoring_method)\n",
@@ -735,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -760,70 +765,65 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>method_name</th>\n",
+       "      <th>initial_mean</th>\n",
        "      <th>2-level features_mean</th>\n",
        "      <th>3-level features_mean</th>\n",
-       "      <th>2-level features_std</th>\n",
-       "      <th>3-level features_std</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>LogisticRegression</td>\n",
-       "      <td>0.590</td>\n",
-       "      <td>0.641</td>\n",
-       "      <td>0.124</td>\n",
-       "      <td>0.118</td>\n",
+       "      <td>0.516</td>\n",
+       "      <td>0.645</td>\n",
+       "      <td>0.581</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>RandomForestClassifier</td>\n",
-       "      <td>0.577</td>\n",
-       "      <td>0.631</td>\n",
-       "      <td>0.121</td>\n",
-       "      <td>0.114</td>\n",
+       "      <td>0.536</td>\n",
+       "      <td>0.624</td>\n",
+       "      <td>0.598</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>SVC</td>\n",
-       "      <td>0.586</td>\n",
-       "      <td>0.619</td>\n",
-       "      <td>0.116</td>\n",
-       "      <td>0.128</td>\n",
+       "      <td>0.529</td>\n",
+       "      <td>0.635</td>\n",
+       "      <td>0.582</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>KNeighborsClassifier</td>\n",
-       "      <td>0.585</td>\n",
-       "      <td>0.630</td>\n",
-       "      <td>0.130</td>\n",
-       "      <td>0.108</td>\n",
+       "      <td>0.552</td>\n",
+       "      <td>0.628</td>\n",
+       "      <td>0.570</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              method_name  2-level features_mean  3-level features_mean  \\\n",
-       "0      LogisticRegression                  0.590                  0.641   \n",
-       "1  RandomForestClassifier                  0.577                  0.631   \n",
-       "2                     SVC                  0.586                  0.619   \n",
-       "3    KNeighborsClassifier                  0.585                  0.630   \n",
+       "              method_name  initial_mean  2-level features_mean  \\\n",
+       "0      LogisticRegression         0.516                  0.645   \n",
+       "1  RandomForestClassifier         0.536                  0.624   \n",
+       "2                     SVC         0.529                  0.635   \n",
+       "3    KNeighborsClassifier         0.552                  0.628   \n",
        "\n",
-       "   2-level features_std  3-level features_std  \n",
-       "0                 0.124                 0.118  \n",
-       "1                 0.121                 0.114  \n",
-       "2                 0.116                 0.128  \n",
-       "3                 0.130                 0.108  "
+       "   3-level features_mean  \n",
+       "0                  0.581  \n",
+       "1                  0.598  \n",
+       "2                  0.582  \n",
+       "3                  0.570  "
       ]
      },
-     "execution_count": 129,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "column_order = ['method_name', '2-level features_mean', '3-level features_mean', '2-level features_std', '3-level features_std']\n",
+    "column_order = ['method_name', 'initial_mean','2-level features_mean', '3-level features_mean']#, '2-level features_std', '3-level features_std']\n",
     "df_results[column_order].round(3)"
    ]
   },
@@ -833,6 +833,320 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Feature selection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lasso = Lasso(alpha=0.01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "initial 3\n",
+      "2-level features 8\n",
+      "3-level features 12\n"
+     ]
+    }
+   ],
+   "source": [
+    "best_features_dict = {}\n",
+    "\n",
+    "for columns_descryption, columns_list in zip(\n",
+    "    ['initial', '2-level features', '3-level features'],\n",
+    "    [columns_initial, columns_2click, columns_3click],\n",
+    "):\n",
+    "    train_normed = ss.fit_transform(df[columns_list].values)\n",
+    "\n",
+    "    lasso.fit(train_normed, target)\n",
+    "    useful_features_nums = np.nonzero(lasso.coef_)[0]\n",
+    "    n_features = len(useful_features_nums)\n",
+    "    print(columns_descryption, n_features)\n",
+    "    best_features_dict[columns_descryption] = np.array(columns_list)[useful_features_nums]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results_list = []\n",
+    "\n",
+    "for method in methods_list:\n",
+    "    method_name = method.__class__.__name__\n",
+    "    result = {\n",
+    "        'method_name': method_name,\n",
+    "    }\n",
+    "\n",
+    "    for columns_descryption, best_features in best_features_dict.items():\n",
+    "        train_normed = ss.fit_transform(df[best_features].values)\n",
+    "        scoring_method = 'roc_auc'\n",
+    "        method_scores = cross_val_score(lr, X=train_normed, y=target, cv=rk, scoring=scoring_method)\n",
+    "        method_score_mean = method_scores.mean()\n",
+    "        method_score_std = method_scores.std()\n",
+    "        result4columns = {\n",
+    "            f'{columns_descryption}_mean': method_score_mean,\n",
+    "            f'{columns_descryption}_std': method_score_std,\n",
+    "        }\n",
+    "        result.update(result4columns)\n",
+    "\n",
+    "    results_list.append(result)#, name=method_name))\n",
+    "\n",
+    "df_results = pd.DataFrame(results_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>method_name</th>\n",
+       "      <th>initial_mean</th>\n",
+       "      <th>2-level features_mean</th>\n",
+       "      <th>3-level features_mean</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>LogisticRegression</td>\n",
+       "      <td>0.597</td>\n",
+       "      <td>0.643</td>\n",
+       "      <td>0.610</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>RandomForestClassifier</td>\n",
+       "      <td>0.600</td>\n",
+       "      <td>0.633</td>\n",
+       "      <td>0.587</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>SVC</td>\n",
+       "      <td>0.601</td>\n",
+       "      <td>0.662</td>\n",
+       "      <td>0.618</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>KNeighborsClassifier</td>\n",
+       "      <td>0.598</td>\n",
+       "      <td>0.635</td>\n",
+       "      <td>0.610</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              method_name  initial_mean  2-level features_mean  \\\n",
+       "0      LogisticRegression         0.597                  0.643   \n",
+       "1  RandomForestClassifier         0.600                  0.633   \n",
+       "2                     SVC         0.601                  0.662   \n",
+       "3    KNeighborsClassifier         0.598                  0.635   \n",
+       "\n",
+       "   3-level features_mean  \n",
+       "0                  0.610  \n",
+       "1                  0.587  \n",
+       "2                  0.618  \n",
+       "3                  0.610  "
+      ]
+     },
+     "execution_count": 237,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_results[column_order].round(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 248,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'initial': array(['Closeness_initial_median', 'Degrees_initial_median',\n",
+      "       'GlobalEfficiency_initial_median'], dtype='<U31'), '2-level features': array(['Betweenness_G_2click_1simplex_median',\n",
+      "       'Closeness_G_2click_1simplex_median', 'Closeness_initial_median',\n",
+      "       'Clustering_G_2click_1simplex_median', 'Degrees_initial_median',\n",
+      "       'GlobalEfficiency_initial_median',\n",
+      "       'LocalEfficiency_G_2click_1simplex_median',\n",
+      "       'LocalEfficiency_initial_median'], dtype='<U41'), '3-level features': array(['AvgNodeDegree_G_3click_1simplex_median',\n",
+      "       'AvgNodeDegree_G_3click_2simplex_median',\n",
+      "       'Betweenness_G_3click_1simplex_median',\n",
+      "       'Betweenness_G_3click_2simplex_median',\n",
+      "       'Closeness_G_3click_2simplex_median',\n",
+      "       'Clustering_G_3click_1simplex_median',\n",
+      "       'Clustering_G_3click_2simplex_median', 'Degrees_initial_median',\n",
+      "       'GlobalEfficiency_G_3click_1simplex_median',\n",
+      "       'LocalEfficiency_G_3click_1simplex_median',\n",
+      "       'LocalEfficiency_initial_median', 'n_3click_2simplex_median'],\n",
+      "      dtype='<U41')}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(best_features_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 250,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import make_scorer\n",
+    "\n",
+    "def selection_step(model, X, y, used_features=(), cv=3):\n",
+    "    ### BEGIN Solution\n",
+    "    X_with_used_features = X.loc[:, used_features]\n",
+    "    scores = cross_val_score(model, X_with_used_features, y, cv=3, scoring='neg_mean_squared_error')\n",
+    "    ### END Solution\n",
+    "\n",
+    "    return scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 251,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def forward_steps(X, y, n_rounds, method):   \n",
+    "    feat_best_list = []\n",
+    "\n",
+    "    ### BEGIN Solution\n",
+    "    features_all = X.columns\n",
+    "    \n",
+    "    round_number = 0\n",
+    "    current_score = None\n",
+    "    \n",
+    "    while round_number < n_rounds:\n",
+    "        round_number += 1\n",
+    "        \n",
+    "        best_new_feature = None\n",
+    "        best_new_score = None\n",
+    "        \n",
+    "        for feature2try in features_all:\n",
+    "            if feature2try in feat_best_list:\n",
+    "                continue\n",
+    "            \n",
+    "            features2try = feat_best_list.copy() + [feature2try]\n",
+    "            \n",
+    "            scores = selection_step(method, X.loc[:, features2try], y, used_features=features2try)\n",
+    "            score = scores.mean()  # Why do we need scores?\n",
+    "            \n",
+    "            if (best_new_score is None) or (score > best_new_score):\n",
+    "                best_new_score = score\n",
+    "                best_new_feature = feature2try\n",
+    "        \n",
+    "        if (current_score is None) or (best_new_score > current_score):\n",
+    "            current_score = best_new_score\n",
+    "            feat_best_list = feat_best_list + [best_new_feature]\n",
+    "            round_number = 0\n",
+    "#             print(current_score, feat_best_list)\n",
+    "    \n",
+    "    ### END Solution\n",
+    "    \n",
+    "    return feat_best_list\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 254,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.tree import DecisionTreeRegressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 265,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['LocalEfficiency_G_2click_1simplex_median', 'Betweenness_G_3click_1simplex_median', 'Degrees_G_3click_2simplex_median', 'Clustering_G_3click_1simplex_median']\n"
+     ]
+    }
+   ],
+   "source": [
+    "### BEGIN Solution\n",
+    "# depressor = DecisionTreeRegressor(max_depth=2)\n",
+    "depressor = RandomForestClassifier(n_estimators=100, max_depth=3)\n",
+    "best_features = forward_steps(df, y_list, n_rounds=3, method=depressor)\n",
+    "print(best_features)\n",
+    "### END Solution"
+   ]
   },
   {
    "cell_type": "code",
